ISSUE: Redmine 663 PURPOSE: Tighten up vertical space on new loan form. DESCRIPTION: Moving the placeholders for links to agent details for picked agents to span next to label for field.  Changing margin-bottom for **All** labels to 0 to reduce excess vertical whitespace on **All** forms in custom_styles.css.

--- a/includes/css/custom_styles.css
+++ b/includes/css/custom_styles.css
@@ -194,7 +194,8 @@ form input.anchor-button:hover {
 	background-color: #f8f9fa;
 }
 label {
-	margin-bottom: 0.25em;
+	/* Override bootstrap label .5rem to reduce excess whitespace on forms. */
+	margin-bottom: 0;
 }
 .border {
 	/*	border-color: #bac5c6;
